# home_designer

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
docs/: Architecture.md  Development.md  PRD.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: db.rs  image.rs  kimi.rs  mod.rs  rendering.rs  storage.rs
src/components/chat/: ChatInterface.tsx
src/components/settings/: SettingsDialog.tsx
src/components/sidebar/: ProjectSidebar.tsx
src/components/upload/: ImageLightbox.tsx  ImageUploader.tsx
src/components/viewer/: RenderingViewer.tsx
src/services/: api.ts
src/stores/: projectStore.ts
src/types/: index.ts
src/utils/: format.ts
