[package]
name = "home-designer"
version = "0.1.0"
description = "AI-powered interior design application"
authors = ["BroPants"]
license = "MIT"
repository = "git@github.com:BroPants/home_designer.git"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "dialog-all", "notification-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
base64 = "0.21"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"

# SQLite
rusqlite = { version = "0.30", features = ["bundled", "chrono", "uuid"] }

[dev-dependencies]
tempfile = "3.9"

[features]
custom-protocol = ["tauri/custom-protocol"]
